# emailvalidation-rs

./: Cargo.toml  README.md
src/: error.rs
src/models/: mod.rs
