[package]
name = "emailvalidation-rs"
description = "A REST API wrapper for emailvalidation.io"
homepage = "https://github.com/everapihq/emailvalidation-rs"
repository = "https://github.com/everapihq/emailvalidation-rs"
documentation = "https://emailvalidation.io/docs"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
serde_json = "1.0.72"

[dependencies.serde]
version = "1.0.131"
features = ["derive"]

[dependencies.strum]
version = "0.24"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.7"
default-features = false
features = ["rustls-tls"]

[dev-dependencies.tokio]
version = "1.19.2"
features = ["rt", "macros"]
